--- a/OSCII/azerty.html
+++ b/OSCII/azerty.html
@@ -14,7 +14,7 @@
   <script src="src/instruments.js"></script>
   <script src="src/sprites.js"></script>
   <script src="src/setup_azerty.js"></script>
-  <script src="src/editor.js"></script>
+  <script src="src/editor_azerty.js"></script>
   <script src="src/editor_init.js"></script>
   <script src="src/canvas.js"></script>
   <script src="src/script.js"></script>
