--- a/pages/son.html
+++ b/pages/son.html
@@ -341,6 +341,9 @@
 					The idea is to bring together, as a creative basis, sound, visual and technological materials, 
 					in an idea of archive work that is close to his heart, or in a certain form of technological archaeology. 
 					The aim is to create a piece in tune with the site, the spectator and his artistic convictions.
+			  </br>
+				  <a id="intvid" width="50%" href ="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa"><iframe width="560" height="315" src="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></a>
+				  
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
