--- a/pages/son.html
+++ b/pages/son.html
@@ -54,7 +54,7 @@
 	<a href="#opera">L'Avenir nous le dira, Diana Soh, Opéra de Lyon 2025</a>
   </p>
 <div id="centerpoint">
-  <dialog id="orgmitra">
+  <dialog id="opera">
 	<h2>
 		L'Avenir nous le dira, Diana Soh, Opéra de Lyon 2025
 	</h2>
