--- a/pages/son.html
+++ b/pages/son.html
@@ -311,16 +311,17 @@
 			<p class="titre2">Residencies</p>
 						
 			  <p>
-				<a href="#overkill">Residency at GRAME CNCM December 2024</a>
+				<a href="#grameres">Residency at GRAME CNCM December 2024</a>
 			  </p>
 			  <div id="centerpoint">
-			  <dialog id="overkill">
+			  <dialog id="grameres">
 				<h2>
 					GRAME CNCM, 2024
 				</h2>
 				<p>
+					
 					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
-					<a href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"> link </a>
+					<a id="intvid" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img href="../images/mistralphone.jpg> </a>
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
