--- a/pages/son.html
+++ b/pages/son.html
@@ -90,7 +90,10 @@
 		considered as a whisper of time. <br>
 		My work as a composer, was to create the composition as well as the core of the installation, focusing on durability, interactivity and the sound properties 
 		of the installation. ORG-MITRA is a sound art and land art piece located in Saint-Germain-Nuelles and planned to be playing for 20 years. 
-		<a id="intvid" width="50%" href ="https://lesmurmuresdutemps.fr/les-murmures-du-temps/les-oeuvres/vahan-soghomonian/"><iframe width="560" height="315" src="https://www.youtube.com/embed/GLtlZhiRcv4?si=oPZrD1jqXMPuYEcN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></a>
+		<div id="intvid" width="50%" href ="https://lesmurmuresdutemps.fr/les-murmures-du-temps/les-oeuvres/vahan-soghomonian/">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/GLtlZhiRcv4?si=oPZrD1jqXMPuYEcN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+				</iframe>
+		</div>
 	</p>
 	<a href="#!" style="color:DarkRed;">Close</a>
   </dialog>
@@ -322,7 +325,7 @@
 				<p>
 					
 					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
-					<a id="intvid" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img href="../images/mistralphone.jpg"></a>
+					<a id="intvid" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img src="../images/mistralphone.jpg"></a>
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
@@ -344,7 +347,10 @@
 					in an idea of archive work that is close to his heart, or in a certain form of technological archaeology. 
 					The aim is to create a piece in tune with the site, the spectator and his artistic convictions.
 			  </br>
-				  <a id="intvid" width="50%" href ="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa"><iframe width="560" height="315" src="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></a>
+				  <div id="intvid" width="50%" href ="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa">
+					  <iframe width="560" height="315" src="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+					  </iframe>
+				  </div>
 				  
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
