--- a/pages/son.html
+++ b/pages/son.html
@@ -90,10 +90,10 @@
 		considered as a whisper of time. <br>
 		My work as a composer, was to create the composition as well as the core of the installation, focusing on durability, interactivity and the sound properties 
 		of the installation. ORG-MITRA is a sound art and land art piece located in Saint-Germain-Nuelles and planned to be playing for 20 years. 
-		<div id="intvid" width="50%" href ="https://lesmurmuresdutemps.fr/les-murmures-du-temps/les-oeuvres/vahan-soghomonian/">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/GLtlZhiRcv4?si=oPZrD1jqXMPuYEcN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+		<div id="intvid" style="float:initial" href ="https://lesmurmuresdutemps.fr/les-murmures-du-temps/les-oeuvres/vahan-soghomonian/">
+				<iframe width="100%" style="aspect-ratio:16/9" src="https://www.youtube.com/embed/GLtlZhiRcv4?si=oPZrD1jqXMPuYEcN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 				</iframe>
-		</div>
+		</div></br>
 	</p>
 	<a href="#!" style="color:DarkRed;">Close</a>
   </dialog>
@@ -187,8 +187,8 @@
 	<h2>
 		G2, Rosella-Hightower Dance School, 2021
 	</h2>
-	<div id="intvid"style="margin-right: 50%;">
-	<iframe src="https://www.youtube.com/embed/qGE6FcB74WY?si=XME7oLKf9SyVb2pv&amp;controls=0"  allowfullscreen></iframe>
+	<div id="intvid"style="float:initial">
+	<iframe width="100%" style="aspect-ratio:16/9" src="https://www.youtube.com/embed/qGE6FcB74WY?si=XME7oLKf9SyVb2pv&amp;controls=0"  allowfullscreen></iframe>
 </div>	<br>
 	Dance Creation for Rosella-Hightower Students.<br>
 		Worked on sensors and interactivity, made through PureData, TouchDesigner. 
@@ -325,7 +325,7 @@
 				<p>
 					
 					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
-					<a id="intvid" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img src="../images/mistralphone.jpg"></a>
+					<a id="intvid" style="float:initial" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img width="100%" style="aspect-ratio:4/3" src="../images/mistralphone.jpg"></a>
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
@@ -347,8 +347,8 @@
 					in an idea of archive work that is close to his heart, or in a certain form of technological archaeology. 
 					The aim is to create a piece in tune with the site, the spectator and his artistic convictions.
 			  </br>
-				  <div id="intvid" width="50%" href ="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa">
-					  <iframe width="560" height="315" src="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+				  <div id="intvid" style="float:initial" href ="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa">
+					  <iframe  width="100%" style="aspect-ratio:16/9" src="https://www.youtube.com/embed/AA4dmn_X2H8?si=zUGB1xtbXpTXsASa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 					  </iframe>
 				  </div>
 				  
