--- a/pages/son.html
+++ b/pages/son.html
@@ -48,7 +48,7 @@
 </br>
 
 <div id="rectcomp2">
-	<p class="titre2">Computer Music Designer</p>
+	<p class="titre2">Computer Music Designer <br>&| Composer</p>
 
 <p>
 	<a href="#opera">L'Avenir nous le dira, Diana Soh, Opéra de Lyon 2025</a>
@@ -199,7 +199,7 @@
 
 </div>
 	<div id="rectcomp2">
-		<p class="titre2">Composer &|<br>Musical Projects</p>
+		<p class="titre2">Artistic Projects</p>
 
 		  <p>
 			<a href="#ralt144mi">Ralt144MI</a>
