--- a/pages/son.html
+++ b/pages/son.html
@@ -225,6 +225,9 @@
 			<h2>CtrlSh33eeEEp, Computer Black Metal Music 
 			</h2>
 			<p>
+				<a id="intvid" style="float:initial" href="https://ordinateurdanslatete.bandcamp.com/album/glf">
+					<img width="100%" style="aspect-ratio:1/1" src="https://f4.bcbits.com/img/a4225137958_10.jpg">
+				</a>
 				Duo with Nascimo Marconnet, black metal drummer.
 			</p>
 			<a href="#!" style="color:DarkRed;">Close</a>
