--- a/pages/son.html
+++ b/pages/son.html
@@ -304,7 +304,7 @@
 			</h2>
 			<p>
 				Math rock duo with Julien Hugues, guitar, synthesizers and drum machines.
-				<br> This Projet does no longer exists.
+				<br> This Project does no longer exists.
 			</p>
 			<a href="#!" style="color:DarkRed;">Close</a>
 		  </dialog>
