--- a/pages/son.html
+++ b/pages/son.html
@@ -226,7 +226,7 @@
 			</h2>
 			<p>
 				<a id="intvid" style="float:initial" href="https://ordinateurdanslatete.bandcamp.com/album/glf">
-					<img width="100%" style="aspect-ratio:1/1" src="https://f4.bcbits.com/img/a4225137958_10.jpg">
+					<img style="aspect-ratio:1/1;display: block;float:initial;" width="100%" src="https://f4.bcbits.com/img/a4225137958_10.jpg">
 				</a>
 				Duo with Nascimo Marconnet, black metal drummer.
 			</p>
