--- a/pages/son.html
+++ b/pages/son.html
@@ -328,7 +328,7 @@
 				<p>
 					
 					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
-					<a id="intvid" style="float:initial" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img width="100%" style="aspect-ratio:4/3" src="../images/mistralphone.jpg"></a>
+					<a id="intvid" style="float:initial" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img width="100%" style="aspect-ratio:4/3;display: block;float:initial;" src="../images/mistralphone.jpg"></a>
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
