--- a/pages/son.html
+++ b/pages/son.html
@@ -225,7 +225,7 @@
 			<h2>CtrlSh33eeEEp, Computer Black Metal Music 
 			</h2>
 			<p>
-				<a id="intvid" style="float:initial" href="https://ordinateurdanslatete.bandcamp.com/album/glf">
+				<a id="intvid" href="https://ordinateurdanslatete.bandcamp.com/album/glf">
 					<img style="aspect-ratio:1/1;display: block;float:initial;" width="100%" src="https://f4.bcbits.com/img/a4225137958_10.jpg">
 				</a>
 				Duo with Nascimo Marconnet, black metal drummer.
@@ -328,7 +328,8 @@
 				<p>
 					
 					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
-					<a id="intvid" style="float:initial" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c"><img width="100%" style="aspect-ratio:4/3;display: block;float:initial;" src="../images/mistralphone.jpg"></a>
+					<a id="intvid" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c">
+						<img width="100%" style="aspect-ratio:4/3;display: block;float:initial;" src="../images/mistralphone.jpg"></a>
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
