--- a/pages/son.html
+++ b/pages/son.html
@@ -209,8 +209,15 @@
 			<h2>Ralt144MI
 			</h2>
 			<p>
-				Main musical project, Audiovisual live-coding project between electro-acoustic and technoid music.<br>
-				<a href="https://ralt144mi.remigeorges.fr">ralt144mi.remigeorges.fr</a>
+				Under the alias Ralt144MI, he creates hybrid electronic music that fuses the driving energy of techno, <br>
+				the visual and sonic aesthetics of the demoscene, and the intricacy of electroacoustic experimentation.<br> 
+				His live-coded performances delve into the theme of technological archiving, weaving intricate rhythmic<br> 
+				patterns with captivating visual elements to deliver deeply immersive audiovisual experiences.<br>
+				<br>
+				This project has been developed and showcased with the support of esteemed institutions and festivals, <br>
+				including Fubar Festival (Zagreb), Athenor CNCM (Saint-Nazaire), Art Zoyd Studios (Valenciennes), Grame CNCM (Lyon), <br>
+				Arts Meets Radical Openness Festival (Linz), Amaze Festival (Berlin), Overkill Festival (Enschede)… <br>
+				<br> More on <a href="https://ralt144mi.remigeorges.fr">ralt144mi.remigeorges.fr</a>
 			</p>
 			<a href="#!" style="color:DarkRed;">Close</a>
 		  </dialog>
