--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,15 +58,15 @@
 		      <p class="stitre"> Computer Music Designer, 
 Sound Technician,</br>Live-Coder Artist </p>
 		      <br>
-		      Rémi Georges, based in Lyon, is a sound artist, composer, and computer music designer <br>
-		      with a background in classical percussion and a Master’s in Computer Music Design. <br>
-		      Merging traditional and contemporary technologies, he develops bespoke instruments and software <br>
-		      to craft innovative performances and installations. His work focuses on sound installations, <br>
-		      interactive generative compositions, and improvised electronic music, always guided by a commitment <br>
-		      to open-source principles.<br>
+		      Rémi Georges, based in Lyon, is a sound artist, composer, and computer music designer 
+		      with a background in classical percussion and a Master’s in Computer Music Design. 
+		      Merging traditional and contemporary technologies, he develops bespoke instruments and software 
+		      to craft innovative performances and installations. His work focuses on sound installations, 
+		      interactive generative compositions, and improvised electronic music, always guided by a commitment 
+		      to open-source principles.
                       <br>
-		      As a member of the Cookie Collective and TOPLAP, Rémi organizes events, leads workshops,<br>
-		      and curates releases under his label Ordinateur dans la tête.<br><br>
+		      As a member of the Cookie Collective and TOPLAP, Rémi organizes events, leads workshops,
+		      and curates releases under his label Ordinateur dans la tête.<br>
         To send me digital postcards over the world wide web : </br>
         <b>remi.georges@protonmail.com</b> </br> 
         
