--- a/pages/son.html
+++ b/pages/son.html
@@ -209,15 +209,16 @@
 			<h2>Ralt144MI
 			</h2>
 			<p>
-				Under the alias Ralt144MI, he creates hybrid electronic music that fuses the driving energy of techno, <br>
-				the visual and sonic aesthetics of the demoscene, and the intricacy of electroacoustic experimentation.<br> 
-				His live-coded performances delve into the theme of technological archiving, weaving intricate rhythmic<br> 
-				patterns with captivating visual elements to deliver deeply immersive audiovisual experiences.<br>
+				Under the alias Ralt144MI, he creates hybrid electronic music that fuses the driving energy of techno, 
+				the visual and sonic aesthetics of the demoscene, and the intricacy of electroacoustic experimentation. 
+				His live-coded performances delve into the theme of technological archiving, weaving intricate rhythmic 
+				patterns with captivating visual elements to deliver deeply immersive audiovisual experiences.
 				<br>
-				This project has been developed and showcased with the support of esteemed institutions and festivals, <br>
-				including Fubar Festival (Zagreb), Athenor CNCM (Saint-Nazaire), Art Zoyd Studios (Valenciennes), Grame CNCM (Lyon), <br>
-				Arts Meets Radical Openness Festival (Linz), Amaze Festival (Berlin), Overkill Festival (Enschede)… <br>
-				<br> More on <a href="https://ralt144mi.remigeorges.fr">ralt144mi.remigeorges.fr</a>
+				This project has been developed and showcased with the support of esteemed institutions and festivals, 
+				including Fubar Festival (Zagreb), Athenor CNCM (Saint-Nazaire), Art Zoyd Studios (Valenciennes), Grame CNCM (Lyon),
+				Arts Meets Radical Openness Festival (Linz), Amaze Festival (Berlin), Overkill Festival (Enschede)… 
+				<br> 
+				More on <a href="https://ralt144mi.remigeorges.fr">ralt144mi.remigeorges.fr</a>
 			</p>
 			<a href="#!" style="color:DarkRed;">Close</a>
 		  </dialog>
