--- a/pages/son.html
+++ b/pages/son.html
@@ -336,8 +336,8 @@
 				<p>
 					
 					Residency at GRAME National Center for Musical Creation, with Sara Lehad, Turner Williams Jr. and Loic Ponceau for our Free Impro Electro Acoustic Group. 
-					<a id="intvid" href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c">
-						<img width="100%" style="aspect-ratio:4/3;display: block;float:initial;" src="../images/mistralphone.jpg"></a>
+					<a href="https://www.grame.fr/productions/le-groupe-d-improvisation-electro-acoustique-6756d630b260c">
+						<img id="intvid" width="80%" style="aspect-ratio:4/3;display: block;float:initial;" src="../images/mistralphone.jpg"></a>
 				</p>
 				<a href="#!" style="color:DarkRed;">Close</a>
 			  </dialog>
