--- a/lineup_algo25.html
+++ b/lineup_algo25.html
@@ -9,33 +9,33 @@
 <tbody>
 <tr>
 <td><strong>18h20</strong></td>
-<td>Marlen</td>
+<td>marlen</td>
 <td>//</td>
 </tr>
 <tr>
 <td><strong>19h00</strong></td>
-<td>Three Naughti Bois</td>
-<td>Maeert</td>
+<td>three_naughti_bois</td>
+<td>maeertt</td>
 </tr>
 <tr>
 <td><strong>19h40</strong></td>
-<td>Lucky Juj</td>
-<td>Kaamtar</td>
+<td>lucky.juj</td>
+<td>kaamtar</td>
 </tr>
 <tr>
 <td><strong>20h20</strong></td>
-<td>Libre &amp;change Trio</td>
+<td>libre_&amp;change_trio</td>
 <td>//</td>
 </tr>
 <tr>
 <td><strong>21h00</strong></td>
-<td>Polymorphic Engine</td>
+<td>polymorphic_engine</td>
 <td>Lbvp</td>
 </tr>
 <tr>
 <td><strong>21h40</strong></td>
-<td>ParVagues</td>
-<td>Peregrine</td>
+<td>parvagues</td>
+<td>peregrine</td>
 </tr>
 <tr>
 <td><strong>22h20</strong></td>
@@ -45,56 +45,56 @@
 <tr>
 <td><strong>23h00</strong></td>
 <td>th4</td>
-<td>Syntonie</td>
+<td>syntonie</td>
 </tr>
 <tr>
 <td><strong>23h40</strong></td>
-<td>Afalfl</td>
+<td>afa_lfl</td>
 <td>z0rg</td>
 </tr>
 <tr>
 <td><strong>00h20</strong></td>
-<td>Sara Adkins</td>
+<td>sara_adkins</td>
 <td>dok</td>
 </tr>
 <tr>
 <td><strong>01h00</strong></td>
-<td>Jaxa</td>
-<td>Syntonie</td>
+<td>jaxa</td>
+<td>syntonie</td>
 </tr>
 <tr>
 <td><strong>01h40</strong></td>
-<td>Azertype</td>
-<td>Plot</td>
+<td>azertype</td>
+<td>plot</td>
 </tr>
 <tr>
 <td><strong>02h20</strong></td>
-<td>Crash Server</td>
-<td>Plot</td>
+<td>crash Server</td>
+<td>plot</td>
 </tr>
 <tr>
 <td><strong>03h00</strong></td>
-<td>Bubo &amp; Ralt</td>
-<td>GCode</td>
+<td>bubo &amp; ralt</td>
+<td>g_code</td>
 </tr>
 <tr>
 <td><strong>03h40</strong></td>
-<td>C_Robo_</td>
-<td><em>Ralt144MI</em></td>
+<td>c_robo_</td>
+<td><em>ralt144mi</em></td>
 </tr>
 <tr>
 <td><strong>04h20</strong></td>
-<td>Nabir</td>
-<td>Kaamtar</td>
+<td>nabir</td>
+<td>kaamtar</td>
 </tr>
 <tr>
 <td><strong>05h00</strong></td>
-<td>Nesso</td>
-<td>GCode</td>
+<td>nesso</td>
+<td>g_code</td>
 </tr>
 <tr>
 <td><strong>05h40</strong></td>
-<td>Fronssons</td>
+<td>fronssons</td>
 <td>z0rg</td>
 </tr>
 </tbody>
