--- a/lineup_algo25.html
+++ b/lineup_algo25.html
@@ -25,12 +25,12 @@
 <tr>
 <td><strong>20h20</strong></td>
 <td>nesso</td>
-<td>kaamtar</td>
+<td>//</td>
 </tr>
 <tr>
 <td><strong>21h00</strong></td>
 <td>polymorphic_engine</td>
-<td>Lbvp</td>
+<td>lbvp</td>
 </tr>
 <tr>
 <td><strong>21h40</strong></td>
