--- a/pages/son.html
+++ b/pages/son.html
@@ -794,5 +794,30 @@
   		</div>
   		
 	<div class="footer">@2025    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
+
+
+<script>
+  document.querySelectorAll("dialog").forEach(dialog => {
+    dialog.addEventListener("click", (e) => {
+      const rect = dialog.getBoundingClientRect();
+      if (
+        e.clientX < rect.left ||
+        e.clientX > rect.right ||
+        e.clientY < rect.top ||
+        e.clientY > rect.bottom
+      ) {
+        dialog.close();
+      }
+    });
+
+    // optionnel : support du lien <a href="#!" ...>Close</a>
+    dialog.querySelectorAll("[href='#!']").forEach(closeBtn => {
+      closeBtn.addEventListener("click", () => dialog.close());
+    });
+  });
+</script>
+
+		
 	</body>
 </html>
+
