--- a/pages/son.html
+++ b/pages/son.html
@@ -11,8 +11,6 @@
  <style>
     dialog {
       padding: 1em;
-      border: none;
-      border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
     dialog::backdrop {
@@ -811,31 +809,32 @@
 
 
 <script>
-    document.querySelectorAll("dialog").forEach(dialog => {
-      // clic en dehors = fermer
-      dialog.addEventListener("click", (e) => {
-        const rect = dialog.getBoundingClientRect();
-        if (
-          e.clientX < rect.left ||
-          e.clientX > rect.right ||
-          e.clientY < rect.top ||
-          e.clientY > rect.bottom
-        ) {
-          dialog.close();
-        }
-      });
+  document.querySelectorAll("dialog").forEach(dialog => {
+    // clic en dehors = fermer
+    dialog.addEventListener("click", (e) => {
+      const rect = dialog.getBoundingClientRect();
+      if (
+        e.clientX < rect.left ||
+        e.clientX > rect.right ||
+        e.clientY < rect.top ||
+        e.clientY > rect.bottom
+      ) {
+        dialog.close();
+      }
+    });
 
-      // boutons/lien Close (href="#!")
-      dialog.querySelectorAll("[href='#!']").forEach(closeBtn => {
-        closeBtn.addEventListener("click", (evt) => {
-          evt.preventDefault(); // évite de scroller en haut
-          dialog.close();
-        });
+    // liens Close (href="#!") = fermer
+    dialog.querySelectorAll("[href='#!']").forEach(closeBtn => {
+      closeBtn.addEventListener("click", (evt) => {
+        evt.preventDefault(); // empêche l'ouverture du lien
+        dialog.close();       // ferme le dialog
       });
     });
-  </script>
+  });
+</script>
 		
 	</body>
 </html>
+
 
 
