--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
        <div id="rectnews">
 
 <marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau">My name is Rémi GEORGES</div></marquee>
-       <marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau">i'm a Sound Engineer</div></marquee> 
-       <div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau">Computer Music Designer</div></marquee>
+       <marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau">i'm a Computer Music Designer</div></marquee> 
+       <div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau">Sound Engineer</div></marquee>
 	       <marquee direction="left" behavior="alternate" scrollamount="8"><div  class="bandeau">musician and visual artist</div></marquee>
 	       <marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau"> <!--Sortie Progressive de Interférences Suite--> </div></marquee><div id="rectnews"><marquee direction="right" behavior="alternate" scrollamount="9"><div  class="bandeau"><!--8/04/21--></div></marquee>
        <marquee direction="right" behavior="alternate" scrollamount="8"><div  class="bandeau"></div></marquee><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br><marquee direction="left" behavior="alternate" scrollamount="9"><div id="rectnews"></br></div></div></div></div></div></div></div></div></div></marquee></marquee></marquee></marquee></marquee></marquee></marquee>
@@ -81,6 +81,7 @@
 
 
 	
-  <div class="footer">@2025    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
+  <div class="footer">@2026    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
   </body>
 </html>
+
