--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,15 +58,15 @@
 		      <p class="stitre"> Computer Music Designer, 
 Sound Technician,</br>Live-Coder Artist </p>
 		      <br>
-		      Rémi Georges, based in Lyon, is a sound artist, composer, and computer music designer 
-		      with a background in classical percussion and a Master’s in Computer Music Design. 
-		      Merging traditional and contemporary technologies, he develops bespoke instruments and software 
-		      to craft innovative performances and installations. His work focuses on sound installations, 
-		      interactive generative compositions, and improvised electronic music, always guided by a commitment 
-		      to open-source principles.
+		      Rémi Georges is a computer music designer, sound artist and composer based in
+Lyon. </br>His practice unfolds through interactive sound installations, algorithmic and
+generative compositions, and improvised electronic performances. </br>
+Working on technological archiving, he develops bespoke instruments and software 
+to craft unexpected performances and installations. </br>
+His work is deeply rooted in experimentation, always guided by a commitment to open-source principles.</br>
                       <br>
 		      As a member of the Cookie Collective and TOPLAP, Rémi organizes events, leads workshops,
-		      and curates releases under his label Ordinateur dans la tête.<br>
+		      and curates releases under his label Ordinateur dans la tête.<br><br><br>
         To send me digital postcards over the world wide web : </br>
         <b>remi.georges@protonmail.com</b> </br> 
         
@@ -145,3 +145,4 @@ Sound Technician,</br>Live-Coder Artist </p>
 	</body>
 
 </html>
+
