--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,7 +66,9 @@ to craft unexpected performances and installations. </br>
 His work is deeply rooted in experimentation, always guided by a commitment to open-source principles.</br>
                       <br>
 		      As a member of the Cookie Collective and TOPLAP, Rémi organizes events, leads workshops,
-		      and curates releases under his label Ordinateur dans la tête.<br><br><br>
+		      and curates releases under his label Ordinateur dans la tête.<br>
+			  <a href='https://remigeorges.fr/Portfolio.pdf'>Download Portfolio</a>
+			  <br><br>
         To send me digital postcards over the world wide web : </br>
         <b>remi.georges@protonmail.com</b> </br> 
         
@@ -145,4 +147,5 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
 	</body>
 
 </html>
+
 
