--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,7 +67,7 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
                       <br>
 		      As a member of the Cookie Collective and TOPLAP, Rémi organizes events, leads workshops,
 		      and curates releases under his label Ordinateur dans la tête.<br>
-			  <a href='https://remigeorges.fr/Portfolio.pdf'>Download Portfolio</a>
+			  <a href='https://remigeorges.fr/Portfolio_ENG.pdf'>Download Portfolio</a>
 			  <br><br>
         To send me digital postcards over the world wide web : </br>
         <b>remi.georges@protonmail.com</b> </br> 
@@ -147,5 +147,6 @@ His work is deeply rooted in experimentation, always guided by a commitment to o
 	</body>
 
 </html>
+
 
 
