--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <h3>friends and cool links</h3>
             <a href="https://forum.toplap.org/" target="_blank" rel="noopener noreferrer"><img src="https://and-kal.github.io/assets/images/toplap.gif"><span hidden="">TOPLAP</span></a>
 			<a href="https://www.adelfaure.net" title="adelfaure.net"><img alt="adelfaure.net" src="https://www.adelfaure.net/src/adl-site-badge.gif"><span hidden="">Adel Faure</span></a>
-			<a href="https://fungi.neocities.org" title="fungi.neocities.org"><img alt="fungi.neocities.org site" src="https://www.adelfaure.net/src/fungi-site-badge.gif"><span hidden="">Fungi</span></a>
+			<a href="https://1bbb.neocities.org" title="1bbb"><img loading="lazy" alt="1bbb" src="https://1bbb.neocities.org/assets/1bbb_88x31.gif"/></a>
+		    <a href="https://fungi.neocities.org" title="fungi.neocities.org"><img alt="fungi.neocities.org site" src="https://www.adelfaure.net/src/fungi-site-badge.gif"><span hidden="">Fungi</span></a>
 			<a href="https://mistigris.org" title="mistigris.org"><img alt="mistigris.org site" src="https://www.adelfaure.net/src/mist-badge.gif"><span hidden="">mistigris</span></a>
 		<h3>my badge</h3>
 		    <a href="https://ralt144mi.remigeorges.fr" title="ralt144mi.remigeorges.fr"><img alt="ralt144mi site" src="https://ralt144mi.remigeorges.fr/images/ralt_badge.gif"><span hidden="">ralt144mi</span></a>
@@ -84,4 +85,5 @@
   <div class="footer">@2026    @Rémi_Georges    <a href="mailto:remi.georges@protonmail.com">Contact</a></div>
   </body>
 </html>
+
 
