--- a/strudel_atelier.html
+++ b/strudel_atelier.html
@@ -20,64 +20,64 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #000000;
-            color: #00ff00;
+            background-color: black;
+            color: darkgreen;
         }
         h1 {
-            color: #00ff00;
-            border-bottom: 3px solid #00cc00;
+            color: darkgreen;
+            border-bottom: 3px solid darkgreen;
             padding-bottom: 10px;
             font-size: 2.5em;
-            text-shadow: 0 0 10px #00ff00;
+            text-shadow: 0 0 10px darkolivegreen;
         }
         h2 {
-            color: #00ff00;
+            color: darkgreen;
             margin-top: 30px;
-            border-left: 4px solid #00cc00;
+            border-left: 4px solid darkolivegreen;
             padding-left: 10px;
             font-size: 2em;
-            text-shadow: 0 0 8px #00ff00;
+            text-shadow: 0 0 8px darkgreen;
         }
         h3 {
-            color: #00dd00;
+            color: darkgreen;
             font-size: 1.5em;
         }
         table {
             width: 100%;
             border-collapse: collapse;
             margin: 20px 0;
-            background-color: #0a0a0a;
-            border: 2px solid #00ff00;
+            background-color: Grey;
+            border: 2px solid DarkGrey;
             box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
         }
         th, td {
             padding: 12px;
             text-align: left;
-            border-bottom: 1px solid #00cc00;
+            border-bottom: 1px solid darkolivegreen;
             font-size: 1.2em;
         }
         th {
-            background-color: #001a00;
-            color: #00ff00;
+            background-color: green;
+            color: darkgreen;
             font-weight: bold;
-            border-bottom: 2px solid #00ff00;
+            border-bottom: 2px solid darkolivegreen;
         }
         tr:hover {
-            background-color: #001a00;
+            background-color: green;
         }
         code {
-            background-color: #001a00;
+            background-color: green;
             padding: 2px 6px;
             border-radius: 3px;
-            font-family: 'VT323', monospace;
-            color: #00ff00;
-            border: 1px solid #00cc00;
+            font-family: 'VG5000', monospace;
+            color: darkgreen;
+            border: 1px solid darkolivegreen;
         }
         ul {
-            background-color: #0a0a0a;
+            background-color: green;
             padding: 20px 40px;
             border-radius: 5px;
-            border: 1px solid #00cc00;
+            border: 1px solid darkolivegreen;
             box-shadow: 0 0 15px rgba(0, 255, 0, 0.2);
         }
         li {
@@ -86,7 +86,7 @@
         }
         hr {
             border: none;
-            border-top: 2px solid #00cc00;
+            border-top: 2px solid green;
             margin: 30px 0;
             box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
         }
@@ -95,18 +95,18 @@
         }
         p {
             font-size: 1.2em;
-            color: #00dd00;
+            color: darkolivegreen;
         }
         strong {
-            color: #00ff00;
-            text-shadow: 0 0 5px #00ff00;
+            color: green;
+            text-shadow: 0 0 5px darkolivegreen;
         }
     </style>
 </head>
 <body>
     <h1>Guide de référence pour Strudel.cc</h1>
 
-    <h2>1. Syntaxe de base et motifs</h2>
+    <h2>1. Mini-Notation : Syntaxe de base et motifs</h2>
     <table>
         <thead>
             <tr>
@@ -133,7 +133,7 @@
                 <td class="centered"><code>/</code></td>
                 <td>Division</td>
                 <td><code>bd/2</code></td>
-                <td>Joue <code>bd</code> à moitié vitesse (demi-fréquence)</td>
+                <td>Joue <code>bd</code> deux fois plus lentement</td>
             </tr>
             <tr>
                 <td class="centered"><code>*</code></td>
